# ProiectER

./: README.md  pyproject.toml
src/: game.py  main.py  settings.py
src/entities/: circle.py  obstacle.py
src/physics/: collision.py
tests/: test_collision.py
