[tool.poetry]
name = "moving-circle-py"
version = "0.1.0"
description = "A simple game featuring a moving circle and obstacles."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"